--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,8 +113,12 @@ Litmus-Chaos:
    #- mkdir ~/.kube
    #- cp  aws-openebs/config ~/.kube/config 
    #- kubectl create -f https://raw.githubusercontent.com/atulabhi/litmus/v0.7-RC1/apps/percona/chaos/openebs_volume_replica_failure/run_litmus_test.yaml
-   - chmod 755 ./script/app-chaos
+   - chmod 775 ./script/app-chaos
    - ./script/app-chaos
+
+  artifacts:
+    paths:
+      - aws-openebs/
 
 cleanup-aws:
   when: always
