--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,19 +60,19 @@ mongodb-jiva:
     paths:
       - aws-openebs/
 
-postgres-jiva:
-  image: atulabhi/kops:v8
-  stage: stateful-apps-deploy
-  dependencies:
-    - openebs-aws-deploy
-  script: 
+        #postgres-jiva:
+        #image: atulabhi/kops:v8
+        #stage: stateful-apps-deploy
+        #dependencies:
+        # - openebs-aws-deploy
+        #script: 
    #- echo "jobs-AWS-Started"
-   - chmod 775 ./script/postgres-app-deploy
-   - ./script/postgres-app-deploy
+   #- chmod 775 ./script/postgres-app-deploy
+   #  - ./script/postgres-app-deploy
 
-  artifacts:
-    paths:
-      - aws-openebs/
+        #artifacts:
+        #paths:
+        #- aws-openebs/
 
 
 cassandra-jiva:
@@ -90,19 +90,19 @@ cassandra-jiva:
       - aws-openebs/
 
 
-jenkins-jiva:
-  image: atulabhi/kops:v8
-  stage: stateful-apps-deploy
-  dependencies:
-    - openebs-aws-deploy
-  script: 
+        #jenkins-jiva:
+        #  image: atulabhi/kops:v8
+        #stage: stateful-apps-deploy
+        #dependencies:
+        #- openebs-aws-deploy
+        #script: 
    #- echo "jobs-AWS-Started"
-   - chmod 775 ./script/jenkins-app-deploy
-   - ./script/jenkins-app-deploy
+   #- chmod 775 ./script/jenkins-app-deploy
+   #- ./script/jenkins-app-deploy
 
-  artifacts:
-    paths:
-      - aws-openebs/
+        # artifacts:
+        #paths:
+        #- aws-openebs/
 
 percona-loadgen:
   image: atulabhi/kops:v8
