--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,33 @@ mongodb-jiva:
     paths:
       - aws-openebs/
 
+postgres-jiva:
+  image: atulabhi/kops:v8
+  stage: stateful-apps-deploy
+  dependencies:
+    - openebs-aws-deploy
+  script: 
+   #- echo "jobs-AWS-Started"
+   - chmod 775 ./script/postgres-app-deploy
+   - ./script/postgres-app-deploy
+
+  artifacts:
+    paths:
+      - aws-openebs/
+
+jenkins-jiva:
+  image: atulabhi/kops:v8
+  stage: stateful-apps-deploy
+  dependencies:
+    - openebs-aws-deploy
+  script: 
+   #- echo "jobs-AWS-Started"
+   - chmod 775 ./script/jenkins-app-deploy
+   - ./script/jenkins-app-deploy
+
+  artifacts:
+    paths:
+      - aws-openebs/
 
 cassandra-jiva:
   image: atulabhi/kops:v8
@@ -98,20 +125,6 @@ cassandra-loadgen:
    #- echo "jobs-AWS-Started"
    - chmod 775 ./script/cassandra-loadgen
    - ./script/cassandra-loadgen
-
-  artifacts:
-    paths:
-      - aws-openebs/
-
-mongodb-loadgen:
-  image: atulabhi/kops:v8
-  stage: apps-loadgen
-  dependencies:
-    - mongodb-jiva
-  script: 
-   #- echo "jobs-AWS-Started"
-   - chmod 775 ./script/mongodb-loadgen
-   - ./script/mongodb-loadgen
 
   artifacts:
     paths:
